# unjiggle

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  demo.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
distribution/: launch-posts.md
src/homeboard/: __init__.py  analyzer.py  cli.py  device.py  itunes.py  layout_engine.py  safety.py  scoring.py  visualize.py
src/unjiggle/: __init__.py  analyzer.py  archetypes.py  cards.py  cli.py  device.py  itunes.py  layout_engine.py  mirror.py  models.py  obituary.py  render.py  safety.py  scoring.py  screentime.py  swipetax.py  telemetry.py  visualize.py
tests/: conftest.py  test_analyzer.py  test_archetypes.py  test_cli_commands.py  test_itunes.py  test_json_api.py  test_layout_engine.py  test_mirror.py  test_models.py  test_obituary.py  test_public_surface.py  test_render.py  test_safety.py  test_scoring.py  test_swipetax.py  test_visualize.py
