[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeboard"
version = "0.1.0"
description = "AI-powered iPhone home screen organizer for Mac"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "chungty"},
]
dependencies = [
    "pymobiledevice3>=9.0.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "httpx>=0.25.0",
    "anthropic>=0.40.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
homeboard = "homeboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
