[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unjiggle"
version = "0.3.0"
description = "AI-powered iPhone home screen organizer. One command to scan, score, and fix your layout over USB."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "chungty"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pymobiledevice3>=9.0.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "httpx>=0.25.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://unjiggle.com"
Repository = "https://github.com/chungty/unjiggle"
Issues = "https://github.com/chungty/unjiggle/issues"

[project.scripts]
unjiggle = "unjiggle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
